2010-12-23  Ramon Novoa  <rnovoa@artica.es>

	* operation/agentes/alerts_status.php: Fixed alert search
	  filters. Fixes bug #3140249.

2010-12-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: cleaned source code style.

2010-12-22  Sancho Lerena <slerena@artica.es>

	* operation/menu.php,
	general/header.php: Fixed some anyoing autorefresh values on most
	operational options.

2010-12-22  Ramon Novoa  <rnovoa@artica.es>

	* operation/events/events_list.php: Fixed event name search and
	  search pagination.

2010-12-22  Sancho Lerena <slerena@artica.es>

        * pandoradb_migrate_v3.1_to_v3.2.sql
        pandoradb.sql: Some fields are now TEXT due the problem with new
        HTML entities encoding.


2010-12-22  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_agents.php: Fixed the massive edition 
	of the agents parent for bug 3141852

2010-12-22  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php,
	  operation/reporting/reporting_xml.php: Draw baseline reports
	  in the future by default.

2010-12-22  Ramon Novoa  <rnovoa@artica.es>

	* operation/agentes/exportdata.php: Fixed data average export.
	  Fixes bug #3141351.

2010-12-22  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/events/events.php: fixed the show list of events when to delete
	the events.
	
	Fixes: #3141622
	
	* operation/events/events_list.php: cleaned source code style.

2010-12-22  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Read the event_type when drawing module
	  charts. Fixes bug #3140516.

2010-12-21  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/exportdata.php: fixed the quotes in the script to
	show the calendar.
	
	Fixes: #3141353

2010-12-21  Miguel de Dios  <miguel.dedios@artica.es>
	
	* images/image_problem.opaque.png: re-upload the lost file in previous
	commit. 

2010-12-21  Miguel de Dios  <miguel.dedios@artica.es>
	